--- a/contact.html
+++ b/contact.html
@@ -19,11 +19,11 @@
 							<li class="active"><a href="contact.html">Contact Me</a></li>
 						</ul>
 						<ul class="icons">
-							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-                            <li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="https://twitter.com/a_doshi1" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+							<li><a href="https://www.facebook.com/aryan.doshi.376/" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+							<li><a href="https://www.instagram.com/aryandoshi1/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+                            <li><a href="https://www.linkedin.com/in/aryandoshi1/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+							<li><a href="https://github.com/aryandoshi1" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 						</ul>
 					</nav>
 					<div id="footer">
@@ -51,31 +51,30 @@
 						<section class="split contact">
 							<section class="alt">
 								<h3>Address</h3>
-								<p>1112 New Dover Rd.<br />
-								Edison, NJ 08820</p>
+								<p><a href="https://www.google.com/maps/place/Edison,+NJ/@40.5381495,-74.3780251,12z/data=!3m1!4b1!4m6!3m5!1s0x89c3d37f68bea199:0xf22bc5a66f83d4ea!8m2!3d40.5187154!4d-74.4120953!16s%2Fm%2F0206myw?entry=ttu">Edison, NJ</a></p>
 							</section>
 							<section>
 								<h3>Phone</h3>
-								<p><a href="#">(848) 667-6887</a></p>
+								<p><a href="Tel: 848-667-6887">(848) 667-6887</a></p>
 							</section>
 							<section>
 								<h3>Email</h3>
-								<p><a href="#">aryandoshi1@gmail.com</a></p>
+								<p><a href="mailto: aryandoshi1@gmail.com">aryandoshi1@gmail.com</a></p>
 							</section>
 							<section>
 								<h3>Social</h3>
 								<ul class="icons alt">
-									<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
-									<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://twitter.com/a_doshi1" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
+									<li><a href="https://www.facebook.com/aryan.doshi.376/" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
+									<li><a href="https://www.instagram.com/aryandoshi1/" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
+									<li><a href="https://www.linkedin.com/in/aryandoshi1/" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
+									<li><a href="https://github.com/aryandoshi1" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
 							</section>
 						</section>
 					</div>
 					<div id="copyright">
-						<ul><li>&copy; Aryan Doshi</li>
+						<ul><li>&copy;ACD Services</li>
 					</div>
 			</div>
 			<script src="jquery.min.js"></script>
