--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
 							<li><a href="contact.html">Contact Me</a></li>
 						</ul>
                         <ul class="icons">
-							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-                            <li><a href="#" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-							<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="https://twitter.com/a_doshi1" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+							<li><a href="https://www.facebook.com/aryan.doshi.376/" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+							<li><a href="https://www.instagram.com/aryandoshi1/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+                            <li><a href="https://www.linkedin.com/in/aryandoshi1/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+							<li><a href="https://github.com/aryandoshi1" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 						</ul>
 					</nav>
 					<div id="main">
@@ -59,12 +59,9 @@
 									<header>
 										<h2><a href="#">Planocate</a></h2>
 									</header>
-									<!-- 
-									<a class="image fit"><img src="pic03.jpg" alt="" /></a>
-									-->
-                                    <video width="400" height="300" controls>
-                                        <a class="video fit"></a><source src="planocateapp.mp4" type="video/mp4" alt="" /></a>
-                                    </video>
+                                    <div class="video fit"><video controls>
+                                        <source src="planocateapp.mp4" type="video/mp4" alt="" />
+                                    </video></div>
 									<p>Planocate by Optimizer is a Proof of Concept pitch for an idea to use AI to help optimize your schedule based on your personal preferances. I had the luxury to lead this concept and ptich in a Shark Tank Competition to showcase the innovative and unique value proposition that the idea brings to a group of 150+ Rutgers alumni.</p>
 									<ul class="actions special">
 										<li><a href="https://docs.google.com/presentation/d/1eUBZKFg-Gv8PjmbfW9AYFl28_TDTeiTj/edit?usp=sharing&ouid=108811367240828992196&rtpof=true&sd=true" class="button">Presentation</a></li>
@@ -73,7 +70,7 @@
 							</section>
 					</div>
 					<div id="copyright">
-						<ul><li>&copy; Aryan Doshi</li>
+						<ul><li>&copy;ACD Services</li>
 					</div>
 			</div>
 			<script src="jquery.min.js"></script>
