--- a/acdservices.html
+++ b/acdservices.html
@@ -32,19 +32,19 @@
 									<header>
 										<h2><a href="#">Academic Tutoring</a></h2>
 									</header>
-									<p>I offer tutoring in a variety of Mathematics courses from Basic Math (Pre-Algebra) to Calculus 5. I have previous tutoring experience from High School as well as a Learning and Teaching Assistant position in the Rutgers Calculus Department.</p>
-									<ul class="actions special">
+									<p>I offer tutoring in a comprehensive range of services aimed at helping students achieve their full potential. With expertise in various subjects, including Mathematics (from Basic Math to Calculus 5), Science, English, and SAT/ACT, I provide personalized one-on-one tutoring sessions tailored to each student's needs. I offer assistance in homework assignments, exam preparation, concept clarification, and skill development.  By fostering a supportive and engaging learning environment, I strive to enhance students' understanding, boost their confidence, and cultivate effective study strategies. With a passion for education and a commitment to student success, alongside experience as a Calculus Teaching Assistant at Rutgers University having taken courses for Peer-Led-Pedagogy, I aim to empower learners to reach their academic goals with confidence and unwavering determination. Scroll down to schedule a meeting with me through Calendly!</p>
+									<!--<ul class="actions special">
 										<li><a href="https://calendly.com/aryandoshi1/availability" class="button">Schedule a Meeting</a></li>
-									</ul>
+									</ul>-->
 								</article>
 								<article>
 									<header>
 										<h2><a href="#">Career Consulting</a></h2>
 									</header>
-									<p>I offer career development services that range from resume reviews to mock interviews. I have previous experience as a Professional Development Head in the Rutgers Professional Engineering Fraternity.</p>
-									<ul class="actions special">
+									<p>I offer a wide range of services to individuals seeking to advance their professional journey. With a deep understanding of the job market and industry trends specifically for internships and new graduate roles, I provide personalized guidance and support to help clients identify their career goals, enhance their communication and interviewing skills, and make informed decisions. Through resume and cover letter critiques, mock interviews, and networking strategies, I assist clients in building a strong personal brand and effectively showcasing their strengths to potential employers. With a passion for helping others succeed, and previous experience as the Professional Development Chair for the Professional Engineering Fraternity Theta Tau at Rutgers University, I am dedicated to supporting clients in reaching their career aspirations and unlocking their full potential. Scroll down to schedule a meeting with me through Calendly!</p>
+									<!--<ul class="actions special">
 										<li><a href="https://calendly.com/aryandoshi1/availability" class="button">Schedule a Meeting</a></li>
-									</ul>
+									</ul>-->
 								</article>
 							</section>
 							<article class="post featured">
