--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 							<article class="post featured">
 								<header class="major">
 									<h2><a href="https://www.linkedin.com/posts/aryandoshi1_i-am-so-excited-to-announce-that-i-have-hosted-activity-6873616100869857280-brHa?utm_source=share&utm_medium=member_desktop">Agile Methodology Certification Workshop</a></h2>
-									<p>I had the esteemed privilege of hosting and fascilitating the first Agile Methodology Certification Workshop, offered at no cost, for the students of Rutgers University.</p>
+									<p>I had the esteemed privilege of personally conducting and facilitating the first Agile Methodology Certification Workshop at Rutgers University. Over the course of the 6 hour workshop, I guided students through interactive sessions, practical exercises, and insightful discussions, ensuring a comprehensive understanding of Agile principles and practices. By leveraging my expertise in Agile methodologies, I aimed to empower participants and foster their growth as future leaders in project management.</p>
 								</header>
                                 <a class="image fit"><img src="pic01.jpg" alt="" /></a>
 								<ul class="actions special">
@@ -50,7 +50,7 @@
 										<h2><a href="#">WINLAB</a></h2>
 									</header>
 									<a class="image fit"><img src="pic02.jpg" alt="" /></a>
-									<p> WINLAB is the Wireless Information Network Laboratory aiming to make fundamental contributions to the thoery and practice of emerging wireless technologies and networks. I had the opportunity to intern for their Data Science team with the research project of Analyzing Social Distancing based on Sensory Inputs.</p>
+									<p> WINLAB is the Wireless Information Network Laboratory aiming to make fundamental contributions to the thoery and practice of emerging wireless technologies and networks. I had the opportunity to intern for their Data Science team with the research project of Analyzing Social Distancing based on Sensory Inputs. Click the poster and presentation button to view details.</p>
 									<ul class="actions special">
 										<li><a href="https://docs.google.com/presentation/d/1e9NmyeVsbkui4ROWRnH92PDzXmObQJ_bCvC0taAYf9M/edit?usp=sharing" class="button">Presentation</a></li>
 									</ul>
@@ -62,7 +62,7 @@
                                     <div class="video fit"><video controls>
                                         <source src="planocateapp.mp4" type="video/mp4" alt="" />
                                     </video></div>
-									<p>Planocate by Optimizer is a Proof of Concept pitch for an idea to use AI to help optimize your schedule based on your personal preferances. I had the luxury to lead this concept and ptich in a Shark Tank Competition to showcase the innovative and unique value proposition that the idea brings to a group of 150+ Rutgers alumni.</p>
+									<p>Planocate by Optimizer is an innovative Proof of Concept pitch that harnesses the power of AI to optimize personal schedules based on individual preferences. I had the privilege of taking on the role of product manager and leading this pitch during a thrilling Shark Tank Competition, where we presented the idea to a diverse audience of 150+ Rutgers alumni. To demonstrate the unique value proposition of our concept, we created a captivating Figma Mock-up Video showcasing the intuitive UI/UX design of our prototype.</p>
 									<ul class="actions special">
 										<li><a href="https://docs.google.com/presentation/d/1eUBZKFg-Gv8PjmbfW9AYFl28_TDTeiTj/edit?usp=sharing&ouid=108811367240828992196&rtpof=true&sd=true" class="button">Presentation</a></li>
 									</ul>
