--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 							<section class="posts">
 								<article>
 									<header>
-										<h2><a href="#">WINLAB</a></h2>
+										<h2><a href="https://www.winlab.rutgers.edu/">WINLAB</a></h2>
 									</header>
 									<a class="image fit"><img src="pic02.jpg" alt="" /></a>
 									<p> WINLAB is the Wireless Information Network Laboratory aiming to make fundamental contributions to the thoery and practice of emerging wireless technologies and networks. I had the opportunity to intern for their Data Science team with the research project of Analyzing Social Distancing based on Sensory Inputs. Click the poster and presentation button to view details.</p>
@@ -57,7 +57,7 @@
 								</article>
 								<article>
 									<header>
-										<h2><a href="#">Planocate</a></h2>
+										<h2><a href="https://docs.google.com/presentation/d/1eUBZKFg-Gv8PjmbfW9AYFl28_TDTeiTj/edit?usp=sharing&ouid=108811367240828992196&rtpof=true&sd=true">Planocate</a></h2>
 									</header>
                                     <div class="video fit"><video controls>
                                         <source src="planocateapp.mp4" type="video/mp4" alt="" />
