--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
 									</div>
 									<div class="field">
 										<label for="email">Email</label>
-										<input type="text" name="email" id="email" />
+										<input type="email" name="email" id="email" required autocomplete="off"/>
 									</div>
 									<div class="field">
 										<label for="message">Message</label>
